# optics-by-example

./: .dir-locals.el  README.org  optics-by-example.cabal  shell.nix
nix/: pkgs.nix  sources.json
src/: Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs
