cabal-version:      3.0
name:               optics-by-example
version:            0.1.0.0
license:            NONE
author:             Johannes Maier
maintainer:         johannes.maier@mailbox.org

library
    exposed-modules:  Chapter2
                    , Chapter3
                    , Chapter4
                    , Chapter5
                    , Chapter6
    build-depends:    base
                    , aeson
                    , containers
                    , generic-lens
                    , lens
                    , lens-aeson
                    , mtl
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
